kubernetes/envoy-gateway/gateways/external/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external
  namespace: envoy-gateway-system
  annotations:
    external-dns.kubernetes.io/target: ddns.yuha0.com
spec:
  gatewayClassName: envoy-external
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "*.yuha0.com"
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: wildcard-external-yuha0-com
    allowedRoutes:
      namespaces:
        from: All
  - name: http
    protocol: HTTP
    port: 80
    hostname: "*.yuha0.com"
    allowedRoutes:
      namespaces:
        from: All
