kubernetes/envoy-gateway/gateways/external/redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: external-https-redirect
  namespace: envoy-gateway-system
  annotations:
    external-dns.kubernetes.io/gateway-hostname-source: defined-hosts-only
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: envoy-external
    sectionName: http
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
